crates/plotnik-tests/tests/04-emit/types/recursion/error_captured_ref_in_recursive_cycle.txt
A = {
  (expression_statement)
  (statement_block (B))?
}

B = {
  (debugger_statement)
  (statement_block
    (A) @x
  )? @s
}
------------------ DIAGNOSTICS -------------------
error: `@x` cannot capture `(A)` because `A` produces no result value
 --> query.ptk:9:5
  |
1 | / A = {
2 | |   (expression_statement)
3 | |   (statement_block (B))?
4 | | }
  | |_- `A` is defined here
...
9 |       (A) @x
  |       ^^^
  |
help: make `A` produce a result by changing `(expression_statement)` to `(expression_statement) @x_value` in definition `A`
help: or remove `@x` and capture a node pattern directly
